personal image added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                     <div class="banner-inner d-flex align-items-center justify-content-center">
                         <!-- Banner Image -->
                         <div class="banner-img mb-4 mb-lg-0">
-                            <img class="img-fluid center-picture" src="https://media.licdn.com/dms/image/v2/D4D03AQH0HN73cIaSEw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1723549021479?e=1730937600&v=beta&t=C_ISc8etCdgv4uNU4Dfq6HSd5G6gPpcf7zsav-ldsZk"
+                            <img class="img-fluid center-picture"
+                                src="https://media.licdn.com/dms/image/v2/D4D03AQH0HN73cIaSEw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1723549021504?e=1747267200&v=beta&t=9oeoePREJbv0yd6ZEL8CTzVtlRc10TVO6LfFU29NyZ8"
                                 alt="Profile" />
                         </div>
                         <!-- End Banner Image -->
