CV and content Updated

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                     <!-- Banner Inner -->
                     <div class="banner-inner d-flex align-items-center justify-content-center">
                         <!-- Banner Image -->
-                        <div class="banner-img mb-4 mb-lg-0">
+                        <!-- <div class="banner-img mb-4 mb-lg-0">
                             <img class="img-fluid center-picture" src="https://media.licdn.com/dms/image/v2/D4D03AQH0HN73cIaSEw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1723549021504?e=1747267200&v=beta&t=9oeoePREJbv0yd6ZEL8CTzVtlRc10TVO6LfFU29NyZ8"
                                 alt="Profile" />
-                        </div>
+                        </div> -->
                         <!-- End Banner Image -->
                         <!-- Banner Text -->
-                        <div class="banner-text ml-lg-5">
+                        <div class="banner-text text-center ml-lg-5">
                             <h2>Hi There!</h2>
                             <h3 class="d-sm-none d-block text-uppercase headline">I'M <b class="is-visible">Nauman</b>
                             </h3>
@@ -126,7 +126,7 @@
                                 </span>
                             </h3>
                             <p>I'M UI/UX Developer with over 4+ years of experience. I create responsive web applications through carefully crafted design.</p>
-                            <div class="social-links d-flex flex-wrap">
+                            <div class="social-links justify-content-center d-flex flex-wrap">
                                 <a href="https://www.linkedin.com/in/nouman-saleem-0b34941a1/" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Linkedin"><i
                                         class="fa fa-linkedin"></i></a>
                                 <a href="https://github.com/NaumanSaleem22" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Github"><i class="fa fa-github"></i></a>
@@ -138,7 +138,7 @@
                             </div>
                             <div class="info-button">
                                 <a href="#about" class="btn btn-secondary about-btn mr-sm-3"><span><i
-                                            class="fa fa-user mr-2"></i>More about me</span></a>
+                                            class="fa fa-user mr-2"></i>My Details</span></a>
                                 <a href="#contact" class="btn btn-primary portfolio-btn mb-0"><span><i
                                             class="fa fa-rocket mr-2"></i>My portfolio</span></a>
                             </div>
@@ -173,7 +173,7 @@
                                     <h4>Hello! I'M <span>NAUMAN</span></h4>
                                     <p>I'm a Front-End Developer with a proven experience of 4+ years. I have worked on different technologies including HTML, CSS, SCSS, Bootstrap, Javascript, Jquery,Angular, Odoo Websites ReactJS, NextJS and Wordpress.
                                         Using these technologies, I have developed responsive webpages, landing pages, Responsive and different interactive webpages. </p>
-                                    <a class="mb-4 mb-lg-0 btn btn-primary" href="./Nauman's Resume April 2024.pdf" download="nauman_cv"><span><i class="fa fa-download mr-2"></i>Download my
+                                    <a class="mb-4 mb-lg-0 btn btn-primary" href="./Nauman_Saleem_Frontend_Developer.pdf" download="Nauman_Saleem_Frontend_Developer"><span><i class="fa fa-download mr-2"></i>Download my
                                             cv</span></a>
                                 </div>
                             </div>
