--- a/index.html
+++ b/index.html
@@ -499,7 +499,37 @@
                     <!-- End Row -->
                     <!-- Row -->
                     <div class="row row-items portfolio-container project-gallery-item">
-                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-responsive filter-ecommerce">
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-responsive ">
+                            <a href="https://www.oaklandmena.com/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/oakland.png" class="img-fluid" alt="Portfolio 3" />
+                                    <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>Oakland Website</h4>
+                                            <p>Website for a Software House </p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing ">
+                            <a href="https://www.7md.ae/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/7md.png" class="img-fluid" alt="Portfolio 3" />
+                                    <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>7md Website</h4>
+                                            <p>Ecommerce Website for 7md Store</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-responsive ">
                             <a href="https://leofren.netlify.app/" target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/leofren6.png" class="img-fluid" alt="Portfolio 3" />
@@ -507,6 +537,20 @@
                                         <div class="portfolio-inner-info">
                                             <h4>Corporate Theme</h4>
                                             <p>Website for a Software House </p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing ">
+                            <a href="https://odooerp-ae-alhor-final-v18.odoo.com/home" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/alhor.png" class="img-fluid" alt="Portfolio 3" />
+                                    <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>AlHor Website</h4>
+                                            <p>Ecommerce Website for AlHor</p>
 
                                         </div>
                                     </div>
@@ -528,8 +572,8 @@
                             </a>
                         </div>
 
-                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-responsive filter-ecommerce">
-                            <a href="" target="_blank">
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive filter-ecommerce">
+                            <a target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/sastatreen.png" class="img-fluid" alt="Portfolio 3" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
@@ -574,6 +618,22 @@
                                 </div>
                             </a>
                         </div>
+
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive filter-ecommerce">
+                            <a href="https://www.yahoud.ae/en/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/yahoud.png" class="img-fluid" alt="Portfolio 3" style="height: 280px;object-fit: cover;" />
+                                    <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>Yah oud</h4>
+                                            <p>Perfume Ecommerce Website</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
                         <!-- End Portfolio Three new -->
                         <!-- Portfolio Three new -->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive filter-ecommerce">
@@ -593,7 +653,8 @@
                         <!-- End Portfolio Three new -->
                         <!-- Portfolio Four -->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive">
-                            <a href="https://www.bicartmaster.com/home" target="_blank">
+                            <!-- <a href="https://bicartmaster.com/" target="_blank"> -->
+                            <a target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/Bicart1000x800.png" class="img-fluid" alt="Portfolio 4" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
@@ -607,7 +668,21 @@
                             </a>
                         </div>
                         <!-- End Portfolio Four -->
+                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive">
+                            <a href="https://thebullpen.pk/" target="_blank">
+                                <div class="portfolio-wrap">
+                                    <img src="assets/images/bullpen1000x800.png" class="img-fluid" alt="Portfolio 7" />
+                                    <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
+                                        <div class="portfolio-inner-info">
+                                            <h4>The Bullpen</h4>
+                                            <p>Coworking Space</p>
 
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+
+                        </div>
                         <!-- Portfolio Four NEW -->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive">
                             <a href="https://horizontal-scrolling-web.netlify.app/" target="_blank">
@@ -786,7 +861,7 @@
 
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing filter-ecommerce">
-                            <a href="" target="_blank">
+                            <a target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/bababeard.png" class="img-fluid" alt="Portfolio 1" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
@@ -818,7 +893,7 @@
                         <!-- Portfolio One -->
                         <!-- Portfolio Two -->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-ecommerce">
-                            <a href="https://sahrezayt.com/">
+                            <a>
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/sahrezayt.png" class="img-fluid" alt="Portfolio 2" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
@@ -852,21 +927,7 @@
                         </div>
                         <!-- End Portfolio Seven -->
                         <!-- Portfolio Seven -->
-                        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-responsive">
-                            <a href="https://thebullpen.pk/" target="_blank">
-                                <div class="portfolio-wrap">
-                                    <img src="assets/images/bullpen1000x800.png" class="img-fluid" alt="Portfolio 7" />
-                                    <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
-                                        <div class="portfolio-inner-info">
-                                            <h4>The Bullpen</h4>
-                                            <p>Coworking Space</p>
 
-                                        </div>
-                                    </div>
-                                </div>
-                            </a>
-
-                        </div>
                         <!-- End Portfolio Seven -->
                         <!-- Portfolio Seven -->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item">
@@ -904,7 +965,7 @@
                         <!-- End Portfolio Eight -->
                         <!-- Portfolio Nine -->
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12 row-item portfolio-item filter-landing">
-                            <a href="https://tcs.designer-dev.com/" target="_blank">
+                            <a target="_blank">
                                 <div class="portfolio-wrap">
                                     <img src="assets/images/tcs1000x800.png" class="img-fluid" alt="Portfolio 9" />
                                     <div class="portfolio-info d-flex flex-column align-items-center justify-content-center">
