--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         <b class="is-hidden">a logo designer</b> -->
                                 </span>
                             </h3>
-                            <p>I'M UI/UX Developer with over 4+ years of experience. I create responsive web applications through carefully crafted design.</p>
+                            <p>I'M Frontend Developer with over 4+ years of experience. I create responsive web applications through carefully crafted design.</p>
                             <div class="social-links justify-content-center d-flex flex-wrap">
                                 <a href="https://www.linkedin.com/in/nouman-saleem-0b34941a1/" target="_blank" data-toggle="tooltip" data-placement="top" data-original-title="Linkedin"><i
                                         class="fa fa-linkedin"></i></a>
